# MiniGUI

./: .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  ChangeLog  ChangeLog.old  Doxyfile  Doxyfile.procs  Doxyfile.sa  Doxyfile.sal  Doxyfile.ths  GNUmakefile  INSTALL  LICENSE-POLICY-en.md  LICENSE-POLICY-zh.md  LICENSE.POLICY  LICENSE.POLICY.zh  Makefile.am  NEWS  README  README.md  RELEASE-NOTES.md  Version  Version.md  autogen.sh  clean_license.sh  cleanup-code.sh  cmake_mgconfig.h.in  configure.ac  configure.in  license-policy-en.md  license-policy-zh.md  make_tarball  makefile.msvc  makefile.ng  minigui.pc.in  rules.make
cmake/: FindFREETYPE.cmake  FindJPEG.cmake  FindMiniGUI.cmake  FindPNG.cmake  FindPTHREAD.cmake  FindZLIB.cmake  Makefile.am  common.cmake  minigui-private.cmake
doc/man3/: Makefile.am  docmaker  functions.txt  minigui.3  miniguiAccelerator.3  miniguiAsyncKey.3  miniguiBitmap.3  miniguiCaretHandler.3  miniguiClipRectHeap.3  miniguiControls.3  miniguiCreateWindow.3  miniguiCursor.3  miniguiDC.3  miniguiDCAttr.3  miniguiDCClipping.3  miniguiDTI.3  miniguiDialogBox.3  miniguiDrawing.3  miniguiEtcFile.3  miniguiFixStr.3  miniguiFunctions.3  miniguiGetSysText.3  miniguiHook.3  miniguiIME.3  miniguiIcon.3  miniguiInit.3  miniguiLite.3  miniguiLogFont.3  miniguiMain.3  miniguiMainWindow.3  miniguiMapTransf.3  miniguiMapping.3  miniguiMenu.3  miniguiMessage.3  miniguiMessages.3  miniguiMisc.3  miniguiPenBrush.3  miniguiRect.3  miniguiRegion.3  miniguiScreen.3  (+7 more)
etc/: Makefile.am  MiniGUI.cfg  MiniGUI.cfg.win32.in  mvfb.cfg
include/: Makefile.am  common.h  control.h  customial.h  dti.c  endianrw.h  exstubs.h  fixedmath.h  gdi.h  makefile.msvc  makefile.ng  minigui.h  nucleus_pthread.h  nucleus_semaphore.h  ose_semaphore.h  own_malloc.h  own_stdio.h  psos.h  psos_pthread.h  psos_semaphore.h  threadx_pthread.h  threadx_semaphore.h  ucos2_pthread.h  ucos2_semaphore.h  vcongui.h  vxworks_pthread.h  vxworks_semaphore.h  win32_dirent.h  win32_pthread.h  win32_sched.h  win32_semaphore.h  window.h  xvfb.h
include/ctrl/: Makefile.am  animation.h  button.h  combobox.h  coolbar.h  ctrlhelper.h  edit.h  gridview.h  iconview.h  listbox.h  listview.h  makefile.msvc  makefile.ng  menubutton.h  monthcal.h  newtoolbar.h  progressbar.h  propsheet.h  scrollbar.h  scrollview.h  spinbox.h  static.h  textedit.h  trackbar.h  treeview.h
obsolete/ime/: CMakeLists.txt  Makefile.am  hzinput.c  hzinput.h  pinyin.c  pinyin.h
src/: CMakeLists.txt  Makefile.am  makefile.msvc  makefile.ng  template.c  template.h
src/client/: CMakeLists.txt  Makefile.am  cliconn.c  client.c
src/control/: CMakeLists.txt  LICENSE  Makefile.am  bidiedit.c  bidiedit_impl.h  button.c  button_impl.h  combobox.c  combobox_impl.h  ctrlmisc.c  ctrlmisc.h  edit.c  edit_impl.h  listbox.c  listbox_impl.h  listmodel.c  listmodel.h  medit_impl.h  menubutton.c  menubutton_impl.h  newtoolbar.c  newtoolbar_impl.h  progressbar.c  progressbar_impl.h  propsheet.c  propsheet.c_orig  propsheet_impl.h  scrollbar.c  scrolled.c  scrolled.h  scrollview.c  scrollview_impl.h  scrollwnd.c  scrollwnd.h  simedit_impl.h  static.c  static_impl.h  text.h  textedit.c  textedit_impl.h  (+2 more)
src/ex_ctrl/: CMakeLists.txt  Makefile.am  animation.c  animation_impl.h  coolbar.c  coolbar_impl.h  gif89a.c  gridview.c  gridview_impl.h  gridviewcelltype.c  iconview.c  iconview_impl.h  listview.c  listview_impl.h  makefile.msvc  makefile.ng  monthcalendar.c  monthcalendar_impl.h  spinbox.c  spinbox_impl.h  treeview.c  treeview_impl.h  treeview_rdr.c
src/font/: CMakeLists.txt  Makefile.am  big5unimap.c  bitmapfont.c  bitmapfont.h  charset-arabic.c  charset-bidi.c  charset-unicode.c  charset.c  charset.h  convgbmap.c  devfont.c  euckrunimap.c  font-engines.c  fontcache.c  fontname.c  freetype.c  freetype.h  freetype1.c  freetype1.h  freetype2.c  freetype2.h  gb18030unimap.c  gbkunimap.c  gbunimap.c  general-bidi.c  general-bidi.h  gunibreak.h  gunichartables.h  gunicode.h  harzbuff-minigui-funcs.c  iso8859-bidi-tables.inc  jisunimap.c  language-code.c  legacy-bidi.c  logfont.c  mapunitobig5.c  mapunitogb.c  mapunitogb18030.c  mapunitogbk.c  (+67 more)
src/gui/: CMakeLists.txt  Makefile.am  accelkey.c  arabickeymap.c  caret.c  ctrlclass.c  de-kmap.c  de-latin1-kmap.c  de-latin1-nodeadkeys-kmap.c  defkeymap.c  dialog.c  es-cp850-kmap.c  es-kmap.c  fr-kmap.c  fr-pc-kmap.c  hebrewkeymap.c  it-kmap.c  keyboard.c  keyboard.h  lf_classic.c  lf_common.c  lf_common.h  lf_fashion.c  lf_flat.c  lf_manager.c  lf_skin.c  lf_tiny.c  linux_kd.h  linux_keyboard.h  linux_types.h  makefile.msvc  makefile.ng  menu.c  transkey.c  window.c
src/ial/: 2410.c  2410.h  2440.c  2440.h  CMakeLists.txt  Makefile.am  abs_signal_driver.c  abs_signal_driver.h  abssig.c  abssig.h  ads.c  ads.h  ads7846.c  ads7846.h  ads_internal.h  arm3000.c  arm3000.h  auto-protocol.h  auto.c  auto.h  c33l05.c  c33l05.h  calib.c  cisco_touchpad.c  cisco_touchpad.h  comminput.c  comminput.h  custom.h  davinci6446.c  davinci6446.h  dfb.c  dfb.h  dm270.c  dm270.h  dmg-stb.c  dmg-stb.h  dummy.c  dummy.h  em85.c  em85.h  (+113 more)
src/image/: CMakeLists.txt  Makefile.am  cdjpeg.h  gif.c  imgapi.c  imgapi.h  jcomapi.c  jdapimin.c  jdapistd.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jdct.h  jddctmgr.c  jdhuff.c  jdhuff.h  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdmerge.c  jdphuff.c  jdpostct.c  jdsample.c  jdtrans.c  jidct.c  jmorecfg.h  jpegint.h  jpeglib.h  jpg.c  jutils.c
src/ime/: Makefile.am  hzinput.c  hzinput.h  pinyin.c  pinyin.h
src/include/: CMakeLists.txt  Makefile.am  accelkey.h  bidi.h  bitmap.h  blockheap.h  blockheap.h.deprecated  client.h  clipboard.h  cliprect.h  constants.h  ctrlclass.h  cursor.h  dc.h  debug.h  devfont.h  drawsemop.h  element.h  event.h  fontname.h  gal.h  gif.h  glyph.h  hash.h  ial.h  icon.h  incoreres.h  inline.h  internals.h  jpg.h  license.h  linux-tty.h  list.h  map.h  md5.h  memops.h  menu.h  mgsock.h  misc.h  msgstr.h  (+13 more)
src/kernel/: CMakeLists.txt  Makefile.am  blockheap.c  compsor-fallback.c  compsor-manager.c  cursor-comm.c  cursor-procs.c  cursor-sa.c  cursor.c  desktop.c  (+19 more)
(+919 files in other folders)
